--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -15,15 +15,15 @@
 # }
 
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
-    before_sleep_cmd = loginctl lock-session    # lock before suspend.
+    lock_cmd = hyprlock       # avoid starting multiple hyprlock instances.
+    #before_sleep_cmd = loginctl lock-session    # lock before suspend.
     after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
 # Screenlock
 listener {
     # HYPRLOCK TIMEOUT
-    timeout = 600
+    timeout = 120
     # HYPRLOCK ONTIMEOUT
     on-timeout = loginctl lock-session
 }
@@ -31,7 +31,7 @@ listener {
 # dpms
 listener {
     # DPMS TIMEOUT
-    timeout = 660
+    timeout = 150
     # DPMS ONTIMEOUT
     on-timeout = hyprctl dispatch dpms off
     # DPMS ONRESUME
@@ -41,7 +41,7 @@ listener {
 # Suspend
 listener {
     # SUSPEND TIMEOUT
-    timeout = 1800
+    timeout = 305
     #SUSPEND ONTIMEOUT
     on-timeout = systemctl suspend
 }
