--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,23 +22,16 @@ monitor=,preferred,auto,auto
 # exec-once = waybar & hyprpaper & firefox
 exec-once = pypr
 exec-once = swaync
-exec-once = swayosd-server
+exec-once = swayosd-server #this is for the volume, brightness etc popup thing
 #exec-once = hyprpaper &hyprpaper
 #exec-execonce = waypaper --restorei
-exec-once = swaybg -i /home/roah/Wallpapers/background.jpg -m fill &
-exec-once = waybar
+exec-once = swaybg -i /home/roah/Wallpapers/background.png -m fill &
 exec-once = kdeconnect-indicator
-exec-once = nm-applet
-exec-once = /usr/lib/polkit-1/polkitd
-exec-once = hyprlock
+exec-once = discord --start-minimized
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+exec-once = hyprlock & hypridle & waybar & nm-applet & blueman-applet
 #exec-once = xfce4-power-manager
-exec-once = blueman-applet
-exec-once = swayidle -w \
-    timeout 120 'hyprlock' \
-    timeout 300 'systemctl suspend' \
-    before-sleep 'hyprlock'
-bindl=,lid,exec,hyprlock
-
+#### Needed for Blur in Swaync/Notification Center ####
 layerrule = blur, swaync-control-center
 layerrule = blur, swaync-notification-window
 
@@ -80,15 +73,14 @@ general {
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-
     layout = master
+    allow_tearing = false
 }
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 5
-    
+    #screen_shader = /home/roah/.config/hypr/Scripts/grayscale.glsl
     blur {
         enabled = true
         size = 10
@@ -209,12 +201,11 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/change_wallpaper.sh
-
+bind = $mainMod, Tab,exec, hyprctl getoption general:layout | grep -q 'dwindle' && hyprctl keyword general:layout master || hyprctl keyword general:layout dwindle
 bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, N, exec, swaync-client -op
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, C, exec, hyprshot -m region -o ~/screenshots
-bind = $mainMod, P, exec, COLOR="$(hyprpicker -r)"; echo -n "$COLOR" | wl-copy; notify-send "Picked Color" "$COLOR"
+#bind = $mainMod, P, exec, COLOR="$(hyprpicker -r)"; echo -n "$COLOR" | wl-copy; notify-send "Picked Color" "$COLOR"
 bind = $mainMod, B, exec, zen-browser
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, Q, killactive, 
@@ -223,7 +214,7 @@ bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, Space, togglefloating, 
 bind = Alt, Space, exec, rofi -show drun -show-icons
 bind = Alt, W, exec, pkill waybar && waybar &
-bind = $mainMod, R, exec, tofi-drun --drun-launch=true
+#bind = $mainMod, R, exec, tofi-drun --drun-launch=true
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, M, fullscreen, 1
@@ -287,6 +278,8 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 #Binding for the fn keys and swaync client for popup
 #used wev to find key names
+bind = $mainMod, Print, exec, hyprshot -m region -o ~/screenshots
+bind = , Print, exec, hyprshot -m output -m active -o ~/screenshots
 # Brightness
 bind = , XF86MonBrightnessUp, exec, swayosd-client --brightness=raise
 bind = , XF86MonBrightnessDown, exec, swayosd-client --brightness=lower
