--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,8 +1,10 @@
 # BACKGROUND
+
 background {
     monitor =
     path = ~/.config/hypr/hyprlock.png
     blur_passes = 1
+    blur_size = 10
     contrast = 0.8916
     brightness = 0.8172
     vibrancy = 0.1696
