--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,8 +12,8 @@
 
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+#monitor=,preferred,auto,auto
+monitors=, 2880x1800@120, auto, 1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -26,10 +26,10 @@ exec-once = swayosd-server #this is for the volume, brightness etc popup thing
 #exec-once = hyprpaper &hyprpaper
 #exec-execonce = waypaper --restorei
 exec-once = swaybg -i /home/roah/Wallpapers/background.png -m fill &
-exec-once = kdeconnect-indicator
 exec-once = discord --start-minimized
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec-once = hyprlock & hypridle & waybar & nm-applet & blueman-applet
+exec-once = kdeconnect-indicator
 #exec-once = xfce4-power-manager
 #### Needed for Blur in Swaync/Notification Center ####
 layerrule = blur, swaync-control-center
@@ -70,10 +70,10 @@ general {
 
     gaps_in = 5
     gaps_out = 5
-    border_size = 2
+    border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-    layout = master
+    layout = dwindle
     allow_tearing = false
 }
 
@@ -198,6 +198,7 @@ windowrulev2 = center,$googlescratchpad
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
+#$mainMod = Alt
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/change_wallpaper.sh
@@ -205,9 +206,9 @@ bind = $mainMod, Tab,exec, hyprctl getoption general:layout | grep -q 'dwindle' 
 bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, N, exec, swaync-client -op
 bind = $mainMod, L, exec, hyprlock
-#bind = $mainMod, P, exec, COLOR="$(hyprpicker -r)"; echo -n "$COLOR" | wl-copy; notify-send "Picked Color" "$COLOR"
+bind = $mainMod SHIFT, C, exec, COLOR="$(hyprpicker -r)"; echo -n "$COLOR" | wl-copy; notify-send "Picked Color" "$COLOR"
 bind = $mainMod, B, exec, zen-browser
-bind = $mainMod, E, exec, nautilus
+bind = $mainMod, R, exec, nautilus
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, Q, exit, 
 bind = $mainMod SHIFT, Q, exit, 
@@ -237,10 +238,10 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-bind = $mainMod, A, resizeactive, -20 0
-bind = $mainMod, D, resizeactive,  20 0
-bind = $mainMod, W, resizeactive,  0 -20
-bind = $mainMod, E, resizeactive,  0 20
+bind = $mainMod, A, resizeactive, -30 0
+bind = $mainMod, D, resizeactive,  30 0
+bind = $mainMod, W, resizeactive,  0 -30
+bind = $mainMod, E, resizeactive,  0 30
 bind = $mainMod, J, movewindow, l
 bind = $mainMod, K, movewindow, r
 bind = $mainMod, H, movewindow, u
@@ -276,22 +277,37 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bindm = , mouse:276, movewindow
+bindm = , mouse:275, resizewindow
+
+
 #Binding for the fn keys and swaync client for popup
 #used wev to find key names
+bind = $mainMod, C, exec, hyprshot -m region --clipboard-only
+
 bind = $mainMod, Print, exec, hyprshot -m region -o ~/screenshots
 bind = , Print, exec, hyprshot -m output -m active -o ~/screenshots
+bind = $mainMod, F12, exec, hyprshot -m region -o ~/screenshots
+bind = , F12, exec, hyprshot -m output -m active -o ~/screenshots
 # Brightness
 bind = , XF86MonBrightnessUp, exec, swayosd-client --brightness=raise
 bind = , XF86MonBrightnessDown, exec, swayosd-client --brightness=lower
-
+bind = , F4, exec, swayosd-client --brightness=raise
+bind = , F3, exec, swayosd-client --brightness=lower
 # Volume
 bind = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume=raise
 bind = , XF86AudioLowerVolume, exec, swayosd-client --output-volume=lower
 bind = , XF86AudioMute,        exec, swayosd-client --output-volume=mute-toggle
+bind = , F8, exec, swayosd-client --output-volume=raise
+bind = , F7, exec, swayosd-client --output-volume=lower
+bind = , F6, exec, swayosd-client --output-volume=mute-toggle
 
 # Mic
 bind = , XF86AudioMicMute,    exec,  swayosd-client --input-volume=mute-toggle
+#bind = , F9,    exec,  swayosd-client --input-volume=mute-toggle
 
 #Playerctl
 bind = , XF86AudioPlay, exec, swayosd-client --playerctl=play-pause
+bind = , F10, exec, swayosd-client --playerctl=play-pause
+
 
